src/app/shared/layout/navigation/navigation.component.css
.sidebar-wrapper {
    width: 270px;
    background: var(--sidebars);
    color: var(--foreground-sidebars);
    transition: 500ms;

    display: flex;
    flex-direction: column;
}

#sidebar-wrapper.collapsed:not(.blockedHover):hover {
    width: 270px;
}

#sidebar-wrapper.collapsed:hover ::ng-deep .collapsed .cambista-item a i.fa-angle-down {
    display: block;
}

#sidebar-wrapper.collapsed:hover ::ng-deep .collapsed .regiao-nome {
    white-space: normal;
    width: 270px;
    display: block;
}

#sidebar-wrapper.collapsed:hover ::ng-deep .collapsed .regiao-nome.hide-item {
    animation-name: showAnim;
    animation-duration: 500ms;
    animation-fill-mode: both;
}

#sidebar-wrapper.collapsed:hover ::ng-deep .consulta-bilhete.collapsed {
    display: block;
}

#sidebar-wrapper.collapsed:hover ::ng-deep .collapsed .regiao > a::after {
    display: block;
}

#sidebar-wrapper.collapsed:hover ::ng-deep .collapsed .sub-nav-container {
    display: block;
}

#sidebar-wrapper.collapsed:hover ::ng-deep .consulta-bilhete-collapsed.collapsed {
    display: none;
}

app-sidebar-nav {
    flex: 1 1 auto;
    height: 0px;
    overflow: hidden;

    display: flex;
    flex-direction: column;
}

.btn-collapse {
    display: flex;
    width: 35px;
    height: 25px;
    justify-content: center;
    align-items: center;
    background-color: var(--highlight);
    color: var(--header);
    border-radius: 5px 0 0 5px;
    transition: 500ms;
}

.collapsed .btn-collapse {
    border-radius: 0;
    width: 100%;
}

.collapsed {
    width: 50px;
    position: absolute;
    z-index: 100;
}

.collapse-container {
    display: flex;
    justify-content: flex-end;
    padding-top: 10px;
    height: 35px;
    transition: 500ms;
}

.collapsed .collapse-container {
    padding-top: 0;
}

.sidebar-wrapper a {
    text-decoration: none;
    cursor: pointer;
}

.sidebar-wrapper .dropdown-item {
    color: inherit;
}

.sidebar-wrapper .dropdown-item:hover {
    color: inherit;
}

.busca-container {
    width: 100%;
    height: 60px;
    display: flex;
    justify-content: center;
    padding-top: 10px;
}

.input-group {
    width: 240px;
    margin: 0;
    padding: 0;
}

.input-group input {
    font-weight: 400;
    font-size: 12px;
    text-transform: uppercase;
}

.input-group-text {
    background-color: var(--highlight);
    border-color: var(--highlight);
    color: #181818;
    font-size: 12px;
}

@media only screen and (max-width: 1024px) {
    .black-screen {
        width: 100%;
        height: 100%;
        position: fixed;
        background: rgba(0, 0, 0, 0.7);
        z-index: 1000;
        top: 0;
    }

    #sidebar-container {

        display: none;
    }

    .sidebar-wrapper {
        width: 100%;
        background: var(--sidebar);
    }
}

